As a user I can log in and out [Delivers #175526139]
